[package]
name = "hf_xet_wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cas_client = { path = "../cas_client" }
cas_object = { path = "../cas_object" }
cas_types = { path = "../cas_types" }
deduplication = { path = "../deduplication" }
mdb_shard = { path = "../mdb_shard" }
merklehash = { path = "../merklehash" }
progress_tracking = { path = "../progress_tracking" }
utils = { path = "../utils" }

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
tokio = { version = "1.44", features = ["sync", "rt"] }
tokio_with_wasm = { version = "0.8.2", features = ["rt"] }
tokio-stream = "0.1.17"
futures-io = "0.3.31"
web-sys = { version = "0.3.72", features = [
    "File",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Blob",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Url",
    "Worker",
    "WorkerType",
    "WorkerOptions",
    "WorkerGlobalScope",
    "Window",
    "Navigator",
    "WorkerNavigator",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
js-sys = "0.3.72"
futures = "0.3.31"
sha2 = { version = "0.10.8", features = ["asm"] }
blake3 = "1.7.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm_thread = "0.3"
log = "0.4.22"
env_logger = "0.11.5"
console_log = { version = "1.0.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
async-trait = "0.1.88"
thiserror = "2.0"
async-channel = "2.3.1"
anyhow = "1"
serde_json = "1.0.140"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1", features = ["v4", "js"] }
bytes = "1.10.1"


[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
