[package]
name = "hub_client"
version = "0.1.0"
edition = "2024"

[dependencies]
cas_client = { path = "../cas_client" }
cas_types = { path = "../cas_types" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }

[[example]]
path = "examples/list_files.rs"
name = "list-files"