[package]
name = "mdb_shard"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merklehash = { path = "../merklehash" }
utils = { path = "../utils" }
thiserror = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
lazy_static = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
async-trait = { workspace = true }
static_assertions = { workspace = true }
itertools = { workspace = true }
futures-io = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }
[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "shard_benchmark"
path = "src/shard_benchmark.rs"
