[package]
name = "merkledb"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
merklehash = { path = "../merklehash" }
utils = { path = "../utils" }

thiserror = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
gearhash = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
bincode = { workspace = true }
rustc-hash = { workspace = true }
tempfile = { workspace = true }
bitflags = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
clap = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
lazy_static = "1.4.0"
tokio = { version = "1.44", features = ["full"] }
rand = "0.9"

[[bench]]
name = "rolling_hash_benchmark"
harness = false

[[bin]]
name = "testdedupe"
path = "src/bin/testdedupe.rs"

[features]
strict = []
