[package]
name = "merklehash"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
blake3 = "1.5.1"
safe-transmute = "0.11.2"
serde = { version = "1.0.129", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2.15", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
heed = "0.11"


[features]
strict = []
