[package]
name = "merklehash"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true, features = ["small_rng"] }
blake3 = { workspace = true }
safe-transmute = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
heed = "0.11"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[features]
strict = []
