[package]
name = "merklehash"
version = "0.14.5"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
safe-transmute = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bytemuck = { workspace = true }
heed = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
bincode = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
strict = []
