[package]
name = "parutils"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["sync"] }
async-scoped = { workspace = true, features = ["use-tokio"] }
futures = { workspace = true }
async-trait = { workspace = true }
len-trait = { workspace = true }

[dev-dependencies]
anyhow = "1"
more-asserts = "0.3.*"

[features]
strict = []
