[package]
name = "progress_tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
merklehash = { path = "../merklehash" }
tokio = { workspace = true, features = ["sync", "test-util"] }
more-asserts = { workspace = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
