[package]
name = "progress_tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
merklehash = { path = "../merklehash" }

async-trait = { workspace = true }
more-asserts = { workspace = true }
tokio = { workspace = true, features = ["sync", "test-util"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
