[package]
name = "utils"
version = "0.14.5"
edition = "2024"

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
error_printer = { path = "../error_printer" }
merklehash = { path = "../merklehash" }

async-trait = { workspace = true }
bytes = { workspace = true }
ctor = { workspace = true }
derivative = { workspace = true }
duration-str = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
pin-project = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "time",
    "rt",
    "macros",
    "sync",
    "test-util",
] }
tracing = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio-util = { workspace = true, features = ["io"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tempfile = { workspace = true }
xet_runtime = { path = "../xet_runtime" }

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
futures-util = { workspace = true }

[features]
strict = []
elevated_information_level = []