[package]
name = "utils"
version = "0.14.5"
edition = "2024"

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "benchmark_hashmaps"
path = "src/data_structures/bin/benchmark_hashmaps.rs"

[dependencies]
error_printer = { path = "../error_printer" }
merklehash = { path = "../merklehash" }

async-trait = { workspace = true }
bytes = { workspace = true }
ctor = { workspace = true }
derivative = { workspace = true }
duration-str = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
more-asserts = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bincode = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "test-util",
] }
tokio-util = { workspace = true, features = ["io"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = ["time", "rt", "macros", "sync"] }
web-time = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tempfile = { workspace = true }
xet_runtime = { path = "../xet_runtime" }

[dev-dependencies]
bincode = { workspace = true }
rand = { workspace = true }
serial_test = { workspace = true }
futures-util = { workspace = true }

[features]
strict = []
elevated_information_level = []
