[package]
name = "wasm-xet-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"


# xet-core local deps
merklehash = { path = "../merklehash" }
cas_types = { path = "../cas_types" }
cas_client = { path = "../cas_client" }
data = { path = "../data" }
utils = { path = "../utils" }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[build]
target = "wasm32-unknown-unknown"
