[package]
name = "wasm_xet"
version = "0.0.1"
edition = "2021"

[features]
default = ["es_modules"]
es_modules = []


[[bin]]
name = "wasm_xet"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-file-reader = "1"
tokio = { version = "1.44", features = ["sync"] }
futures-io = "0.3.31"
web-sys = { version = "0.3.72", features = [
    "File",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Blob",
] }
js-sys = "0.3.72"
futures = "0.3.31"
sha2 = "0.10.8"
blake3 = "1.7.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm_thread = "=0.1.0"
log = "0.4.22"
env_logger = "0.11.5"
console_log = { version = "1.0.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
async-trait = "0.1.88"
thiserror = "2.0"

merklehash = { path = "/Users/di/hf/xet-core/merklehash" }
deduplication = {path = "/Users/di/hf/xet-core/deduplication" }
mdb_shard = {path = "/Users/di/hf/xet-core/mdb_shard" }
merkledb = {path = "/Users/di/hf/xet-core/merkledb" }

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
